k8s/frontend/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: 010741811189.dkr.ecr.us-east-1.amazonaws.com/frontend
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
