k8s/frontend/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
