k8s/frontend/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
